[project]
name = "auralis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "streamlit>=1.51.0",
    "wordcloud>=1.9.4",
]
